--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ openpyxl==3.1.1
 packaging==23.0
 pandas==2.1.3
 Pillow==9.4.0
+plotly==5.18.0
 protobuf==3.20.3
 pyarrow==11.0.0
 pydeck==0.8.0
@@ -44,6 +45,7 @@ semver==2.13.0
 six==1.16.0
 smmap==5.0.0
 streamlit==1.19.0
+tenacity==8.2.3
 toml==0.10.2
 toolz==0.12.0
 tornado==6.2
